[package]
name = "rp-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"

[dependencies.embassy-executor]
version = "0.5.0"
features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-rp]
version= "0.1.0"
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]

[dependencies.embassy-time]
version = "0.3.1"
features = ["defmt", "defmt-timestamp-uptime"]


[dependencies.panic-probe]
version = "0.3.1"
features = ["print-defmt"]